<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strStatus"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/btnConnect"/>

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strConnect"
        android:onClick="connect"

        app:layout_constraintBottom_toTopOf="@id/btnComposeMode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/btnComposeMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strComposeMode"
        android:onClick="composeMode"
        
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ListView
        android:id="@+id/listSong"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:listSelector="@color/colorPrimary"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lblStatus">

    </ListView>


</android.support.constraint.ConstraintLayout>